feat(build-logic): add Jacoco code coverage plugins and core library desugaring support
Introduce AndroidApplicationJacocoConventionPlugin and AndroidLibraryJacocoConventionPlugin to enable Jacoco coverage for application and library modules.
Add configureJacoco helper to setup combined coverage reports aggregating unit and instrumentation tests.
Enhance AndroidApplicationWithHiltConventionPlugin and AndroidLibraryWithHiltConventionPlugin:
  - Enable core library desugaring via isCoreLibraryDesugaringEnabled flag.
  - Add coreLibraryDesugaring dependency configuration.
  - Configure JVM args for test tasks to support dynamic agent loading.
Update dependencies to include Jacoco and desugar library versions and plugin IDs in version catalog.
Refactor Kotlin compiler options and dependencies setup with additional kotlin.test inclusion for unit and android tests.
Ensure build features like buildConfig are enabled and properly configure Java compile options.
Add exclusions for generated code and common Android boilerplate to Jacoco report to improve accuracy.
Provide thorough coverage task naming conventions and modular code structure for future scalability.